--- a/application/templates/application/login.html
+++ b/application/templates/application/login.html
@@ -26,5 +26,6 @@
             {% endfor %}
         </ul>
     {% endif %}
+    <a href="{% url 'home' %}" class="back-button">Voltar à página inicial</a>
 </body>
 </html>
