--- a/application/templates/application/cadastro.html
+++ b/application/templates/application/cadastro.html
@@ -41,5 +41,6 @@
             {% endfor %}
         </ul>
     {% endif %}
+        <a href="{% url 'home' %}" class="back-button">Voltar à página inicial</a>
 </body>
 </html>
