--- a/application/templates/application/painel_enfermeiro.html
+++ b/application/templates/application/painel_enfermeiro.html
@@ -15,7 +15,7 @@
     {% endfor %}
 </div>
 {% endif %}
-
+<a href="{% url 'home' %}" class="botao-voltar-home">Voltar à Página Inicial</a>
 <div class="container-principal">
     <aside class="coluna-menu-lateral">
         <ul class="lista-navegacao">
